# cookiecutter-science-project

./: LICENSE  README.md  build_components_from_scratch.md  cookiecutter.json  pyproj.toml  pyproject.toml
.github/workflows/: ci.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
tests/: conftest.py  test_creation.py
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  environment.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/.github/workflows/: jupyter-book.yaml  linting.yaml  release.yaml  test.yaml
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/.github/workflows/optional/: linting.yaml
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/ci/: .coveragerc  environment-py3.7.yml  environment-py3.8.yml
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/docs/: api.rst  conf.py  environment.yml  index.rst  new_section.rst  new_section_notebook.ipynb
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/notebooks/: counting.ipynb
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/notebooks/jupyter-book/: _config.yml  _toc.yml  landing-page.md  requirements.txt
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/scripts/: setup.sh
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/tests/: test_dummy.py
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/{{ cookiecutter.project_name.lower().replace(' ', '_') }}/tests/: test_dummy.py
{{ cookiecutter.project_name.lower().replace(' ', '_') }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_')  }}/: __init__.py  dummy_module.py
{{ cookiecutter.repo_name }}/: .travis.yml  README.md  environment.yml
{{ cookiecutter.repo_name }}/ci/: .coveragerc  environment_py37  requirements-py37.yml
{{ cookiecutter.repo_name }}/scripts/: setup.sh
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/tests/: test_dummy.py
